--- a/CooperationApp.xcodeproj/xcshareddata/xcschemes/CooperationApp.xcscheme
+++ b/CooperationApp.xcodeproj/xcshareddata/xcschemes/CooperationApp.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1240"
+   LastUpgradeVersion = "1340"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "28907903AF6DD0AD321D92CD660E7E23"
-               BuildableName = "FBSDKCoreKit.framework"
-               BlueprintName = "FBSDKCoreKit"
-               ReferencedContainer = "container:Pods.xcodeproj">
+               BlueprintIdentifier = "93DEFA8127FAFF1600827C79"
+               BuildableName = "CooperationApp.app"
+               BlueprintName = "CooperationApp"
+               ReferencedContainer = "container:CooperationApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -40,6 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "93DEFA8127FAFF1600827C79"
+            BuildableName = "CooperationApp.app"
+            BlueprintName = "CooperationApp"
+            ReferencedContainer = "container:CooperationApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -47,6 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "93DEFA8127FAFF1600827C79"
+            BuildableName = "CooperationApp.app"
+            BlueprintName = "CooperationApp"
+            ReferencedContainer = "container:CooperationApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
