--- a/ToyProjectManagementApp.xcodeproj/xcshareddata/xcschemes/ToyProjectManagementApp.xcscheme
+++ b/ToyProjectManagementApp.xcodeproj/xcshareddata/xcschemes/ToyProjectManagementApp.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:ToyProjectManagementApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A303CFFC3F889597468BCF70D176BDD2"
+               BuildableName = "FirebaseFacebookAuthUI.framework"
+               BlueprintName = "FirebaseFacebookAuthUI"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -40,6 +54,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "93DEFA8127FAFF1600827C79"
+            BuildableName = "ToyProjectManagementApp.app"
+            BlueprintName = "ToyProjectManagementApp"
+            ReferencedContainer = "container:ToyProjectManagementApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -47,6 +71,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "93DEFA8127FAFF1600827C79"
+            BuildableName = "ToyProjectManagementApp.app"
+            BlueprintName = "ToyProjectManagementApp"
+            ReferencedContainer = "container:ToyProjectManagementApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
