--- a/ToyProjectManagementApp/GoogleService-Info.plist
+++ b/ToyProjectManagementApp/GoogleService-Info.plist
@@ -13,21 +13,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>Acho.CooperationApp</string>
+	<string>Acho.ToyProjectManagementApp</string>
 	<key>PROJECT_ID</key>
 	<string>cooperationapp-4acb9</string>
 	<key>STORAGE_BUCKET</key>
 	<string>cooperationapp-4acb9.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:943038616556:ios:0fca58979720d1ba3426c9</string>
 </dict>
